add endpoint detail article
